# openGL-testing

./: CMakeLists.txt
include/: IndexBuffer.h  InitWindow.h  Renderer.h  ShaderLoader.h  VertexArray.h  VertexBuffer.h
res/shaders/: Basic_1.shader  Basic_2.shader
src/: main.cpp
